Closed Bug 1672243 Opened 4 years ago Closed 4 years ago

VoiceOver lags when navigating footer links in facebook login page

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox84 --- verified

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

STR

  1. Navigate down to footer links in facebook login page, either the locale list or the longer link list ("Sign Up", "Log In", "Messenger", etc.)

Expected

Pressing VO Next/Prev should be instant.

Actual

There is a noticeable lag. The measured response time is about double what I observed in Safari.

Notes

I noticed with a tooled version of webkit, when you press VO Next from "Italiano" to "Deutsch" you get 1123 attribute retrievals with the majority being AXParent and AXRole with 826 and with 171 calls respectively.

In contrast, Firefox with the same VO step receives 3367 calls with AXParent being retrieved 962 times, AXSubrole 948 times, AXRole 580 times, and AXChildren 243 times.

Solution

After adding AXIndexForChildUIElement and AXTopLevelUIElement Firefox's call count is reduced to 940, and the measured response time is halved.

AXTopLevelUIElement is not really testable because it doesn't give a useful result in
headless mode. Since it is a clone of AXWindow, this shouldn't be much of an issue.

Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/98577a77c663
Introduce AXIndexForChildUIElement and implement AXTopLevelUIElement. r=MarcoZ
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Flags: qe-verify+

Confirmed a good delay on 83.0, verified with 84.0b2 on macOS 10.15.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: