Bug 1672243 - Introduce AXIndexForChildUIElement and implement AXTopLevelUIElement. r=MarcoZ

AXTopLevelUIElement is not really testable because it doesn't give a useful result in
headless mode. Since it is a clone of AXWindow, this shouldn't be much of an issue.

Differential Revision: https://phabricator.services.mozilla.com/D94154