accessible/mac/MOXAccessibleBase.h
@@ -115,6 +115,12 @@ inline id<mozAccessible> GetObjectOrRepresentedView(id<mozAccessible> aObject) {
 - (id<mozAccessible>)moxParent;
 
 // override
+- (NSNumber*)moxIndexForChildUIElement:(id)child;
+
+// override
+- (id)moxTopLevelUIElement;
+
+// override
 - (id<MOXTextMarkerSupport>)moxTextMarkerDelegate;
 
 #pragma mark -
